<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>uap</artifactId>
	<description>uap</description>
	<name>uap</name>
	<version>${project.parent.version}</version>
	<packaging>jar</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<targetMapperPackage>com.dili.uap.dao</targetMapperPackage>
		<targetModelPackage>com.dili.uap.domain</targetModelPackage>
		<targetServicePackage>com.dili.uap.service</targetServicePackage>
		<targetControllerPackage>com.dili.uap.controller</targetControllerPackage>
		<drools.version>7.28.0.Final</drools.version>
		<java.version>13</java.version>
		<jmockit.version>1.41</jmockit.version>
		<junit-jupiter.version>5.5.0</junit-jupiter.version>
		<junit-platform.version>1.5.0</junit-platform.version>
	</properties>

	<!-- 父工程定义 -->
	<parent>
		<artifactId>dili-uap</artifactId>
		<groupId>com.dili</groupId>
		<version>3.1.0-SNAPSHOT</version>
	</parent>

	<build>
		<finalName>uap</finalName>
		<!-- 资源文件过滤 -->
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>2.3.2.RELEASE</version>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<configuration>
					<nonFilteredFileExtensions>
						<nonFilteredFileExtension>xls</nonFilteredFileExtension>
						<nonFilteredFileExtension>xlsx</nonFilteredFileExtension>
						<nonFilteredFileExtension>zip</nonFilteredFileExtension>
						<nonFilteredFileExtension>rar</nonFilteredFileExtension>
						<nonFilteredFileExtension>7z</nonFilteredFileExtension>
					</nonFilteredFileExtensions>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<!-- 编译JDK版本 -->
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>UTF-8</encoding>
					<parameters>true</parameters>
					<compilerArgs>
						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>bpmc-sdk</artifactId>
			<version>1.4.1-SNAPSHOT</version>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.cloud</groupId>
					<artifactId>spring-cloud-starter-openfeign</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>commons-server</artifactId>
			<version>1.3.4-SNAPSHOT</version>
		</dependency>
		<dependency>
			<artifactId>assets-sdk</artifactId>
			<groupId>com.dili</groupId>
			<version>2.0.0-SNAPSHOT</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>1.9</version>
		</dependency>
		<dependency>
			<groupId>com.alibaba.cloud</groupId>
			<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
			<version>2.2.5.RELEASE</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign -->
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-openfeign</artifactId>
			<version>2.2.5.RELEASE</version>
			<exclusions>
				<exclusion>
					<groupId>com.google.guava</groupId>
					<artifactId>guava</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-ribbon -->
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
			<version>2.2.5.RELEASE</version>
			<exclusions>
				<exclusion>
					<groupId>com.google.guava</groupId>
					<artifactId>guava</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- 发送MQ消息需要 -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-amqp</artifactId>
		</dependency>
<!--		<dependency>-->
<!--			<groupId>org.springframework.security.oauth</groupId>-->
<!--			<artifactId>spring-security-oauth2</artifactId>-->
<!--			<version>2.3.3.RELEASE</version>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.springframework.boot</groupId>-->
<!--			<artifactId>spring-boot-starter-security</artifactId>-->
<!--		</dependency>-->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.1</version>
		</dependency>

		<!-- <dependency> -->
		<!-- <groupId>com.dili</groupId> -->
		<!-- <artifactId>ss-oplog</artifactId> -->
		<!-- <version>${sharp-sword.version}</version> -->
		<!-- </dependency> -->
		<!-- <dependency> -->
		<!-- <groupId>com.dili</groupId> -->
		<!-- <artifactId>ss-idempotent</artifactId> -->
		<!-- <version>${sharp-sword.version}</version> -->
		<!-- </dependency> -->

		<dependency>
			<groupId>com.alibaba.cloud</groupId>
			<artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
			<version>2.2.5.RELEASE</version>
			<exclusions>
				<exclusion>
					<groupId>com.alibaba</groupId>
					<artifactId>fastjson</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>com.belerweb</groupId>
			<artifactId>pinyin4j</artifactId>
			<version>2.5.1</version>
		</dependency>

		<!-- if you enable json support in spring mvc. -->
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-mapper-asl</artifactId>
			<version>1.9.13</version>
		</dependency>

		<!-- 内部包 -->
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>uap-sdk</artifactId>
			<version>${project.parent.version}</version>
		</dependency>
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>cms-sdk</artifactId>
			<version>1.0.0-SNAPSHOT</version>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.cloud</groupId>
					<artifactId>spring-cloud-starter-openfeign</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>ss-processor</artifactId>
			<version>${sharp-sword.version}</version>
		</dependency>
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>ss-oplog</artifactId>
			<version>${sharp-sword.version}</version>
		</dependency>

		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>logger-sdk</artifactId>
			<version>1.0.1-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>org.webjars.npm</groupId>
			<artifactId>swiper</artifactId>
			<version>4.5.0</version>
			<exclusions>
				<exclusion>
					<groupId>org.webjars.npm</groupId>
					<artifactId>ssr-window</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.webjars.npm</groupId>
			<artifactId>ssr-window</artifactId>
			<version>3.0.0-alpha.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.alibaba.cloud/spring-cloud-starter-alibaba-sentinel -->
		<dependency>
			<groupId>com.alibaba.cloud</groupId>
			<artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
			<version>2.2.5.RELEASE</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.alibaba.csp/sentinel-datasource-nacos -->
		<dependency>
			<groupId>com.alibaba.csp</groupId>
			<artifactId>sentinel-datasource-nacos</artifactId>
			<version>1.8.0</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-websocket</artifactId>
		</dependency>
		<!-- 公共信息 -->
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>commons-web</artifactId>
			<version>1.3.4-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>uap-oauth-sdk</artifactId>
			<version>${project.parent.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.alibaba/dubbo -->
		<!-- <dependency> -->
		<!-- <groupId>com.alibaba</groupId> -->
		<!-- <artifactId>dubbo</artifactId> -->
		<!-- <version>2.6.9</version> -->
		<!-- </dependency> -->

		<!-- <dependency> -->
		<!-- <groupId>org.junit.jupiter</groupId> -->
		<!-- <artifactId>junit-jupiter-api</artifactId> -->
		<!-- <version>${junit-jupiter.version}</version> -->
		<!-- <scope>test</scope> -->
		<!-- </dependency> -->
		<!-- <dependency> -->
		<!-- <groupId>org.junit.jupiter</groupId> -->
		<!-- <artifactId>junit-jupiter-engine</artifactId> -->
		<!-- <version>${junit-jupiter.version}</version> -->
		<!-- <scope>test</scope> -->
		<!-- </dependency> -->
		<!-- <dependency> -->
		<!-- <groupId>org.junit.jupiter</groupId> -->
		<!-- <artifactId>junit-jupiter-params</artifactId> -->
		<!-- <version>${junit-jupiter.version}</version> -->
		<!-- <scope>test</scope> -->
		<!-- </dependency> -->

		<!-- <dependency> -->
		<!-- <groupId>org.junit.platform</groupId> -->
		<!-- <artifactId>junit-platform-commons</artifactId> -->
		<!-- <version>${junit-platform.version}</version> -->
		<!-- <scope>test</scope> -->
		<!-- </dependency> -->
		<!-- <dependency> -->
		<!-- <groupId>org.junit.platform</groupId> -->
		<!-- <artifactId>junit-platform-engine</artifactId> -->
		<!-- <version>${junit-platform.version}</version> -->
		<!-- <scope>test</scope> -->
		<!-- </dependency> -->
		<!-- <dependency> -->
		<!-- <groupId>org.springframework.boot</groupId> -->
		<!-- <artifactId>spring-boot-starter-test</artifactId> -->
		<!-- <scope>test</scope> -->
		<!-- <exclusions> -->
		<!-- <exclusion> -->
		<!-- <groupId>junit</groupId> -->
		<!-- <artifactId>junit</artifactId> -->
		<!-- </exclusion> -->
		<!-- <exclusion> -->
		<!-- <groupId>org.junit.vintage</groupId> -->
		<!-- <artifactId>junit-vintage-engine</artifactId> -->
		<!-- </exclusion> -->
		<!-- </exclusions> -->
		<!-- </dependency> -->
		<!-- <dependency> -->
		<!-- <groupId>org.jmockit</groupId> -->
		<!-- <artifactId>jmockit</artifactId> -->
		<!-- <version>${jmockit.version}</version> -->
		<!-- <scope>test</scope> -->
		<!-- </dependency> -->

	</dependencies>

</project>